# Projects

BGP_Simulator/src/graph/: AS.cpp  AS.h
Personal Finance Tracker/: finance.db  main.py  run.sh
Personal Finance Tracker/static/: index.html
PersonalWebsite/: about.html  index.html  projects.html
PersonalWebsite/css/: style.css
PersonalWebsite/data/: projects.json
PersonalWebsite/js/: game-of-life.js  nav.js  projects.js
cyber-plague/: .gitignore  CMakeLists.txt  Makefile  README.md  compile_commands.json  infection_results.csv  test_edges.csv  test_hardened_nodes.csv  test_patient_zero.csv
cyber-plague/.claude/: settings.local.json
cyber-plague/data/input/: hardened_nodes.csv  patient_zero.csv
cyber-plague/include/io/: InputParser.h  OutputWriter.h
cyber-plague/include/network/: Network.h
cyber-plague/include/nodes/: Node.h
cyber-plague/include/policies/: HardenedPolicy.h  Policy.h  StandardPolicy.h
cyber-plague/include/simulation/: Simulator.h
cyber-plague/src/: main.cpp
cyber-plague/src/io/: InputParser.cpp  OutputWriter.cpp
cyber-plague/src/network/: Network.cpp
cyber-plague/src/nodes/: Node.cpp
cyber-plague/src/policies/: HardenedPolicy.cpp  StandardPolicy.cpp
cyber-plague/src/simulation/: Simulator.cpp
cyber-plague/testing_csv/: test_edges.csv  test_hardened_nodes.csv  test_patient_zero.csv
cyber-plague/tests/: README.md  conftest.py  test_game.py
